Fix layout issues in generated PDF file
The layout of PDF document is improved in the following ways:

* Removing the icons before the main sections as they don't
  seem to be rendering correctly when processed by wkhtmltopdf.

* Underlining links to indicate their presence.

* Removing the unwanted padding around the document which results
  in wasted space as wkhtmltopdf adds some border.

* Adding more padding for the skills section to make it appear nice
  in the second page of the document.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,7 +4,7 @@ body {
     color: $text-color-secondary;
     background: $smoky-white;
     font-size: 14px;
-    padding: 30px;
+    // padding: 30px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -22,6 +22,7 @@ a {
     &:focus {
         text-decoration: none;
     }
+    text-decoration: underline;
 }
 
 p {
@@ -194,7 +195,9 @@ p {
     .section {
         margin-bottom: 60px;
     }
-
+    .skills-section {
+        padding-top: 100px;
+    }
     .experiences-section, .educations-section, .contributions-section {
         .item {
             margin-bottom: 30px;
